# wavescope

./: fft.html  fft_server.py  formain.py  fps_control.py  mic_fft.py  pyproject.toml  sender.py  zmq_to_ws.py
src/wavescope/: __init__.py  __main__.py  backup.py  bridge.py  sender.py
src/wavescope/public/: constellation.html  fft.html  plotly.html
src/wavescope/public/experimental/: signal.html
src/wavescope/public/fft/: fftPlot.js  index.html
