[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wavescope"
version = "0.1.0"
dependencies = [
  "numpy",
  "zmq",
]

[project.scripts]
wavescope = "wavescope.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wavescope = ["public/*", "public/*/*"]

[tool.setuptools]
include-package-data = true

